--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>Header</h1>
     </header>
     <main>
+        <section>
         <div class="card">
             <h2>Pinco Pallo</h2>
             <p>
@@ -23,18 +24,23 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ab perspiciatis dignissimos numquam dolore et expedita ducimus obcaecati tempore voluptatum ex quaerat autem veniam adipisci accusantium labore, voluptate quos! Mollitia.
             </p>
     </div>
+    </section>
+    <section>
     <div class="card">
         <h2>Pinco  Pallo</h2>
         <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus debitis, eligendi voluptate ex, similique deleniti nulla aliquam explicabo voluptas provident corporis accusamus dicta delectus accusantium vero quos, officiis optio doloremque?
         </p>
     </div>
+</section>
+<section>
     <div class="card">
         <h2>Pinco Pallo</h2>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, enim quis. Laudantium a, consectetur cupiditate reiciendis deserunt commodi voluptatum nemo ducimus animi necessitatibus eligendi ullam sequi minima rerum quae nobis.
         </p>
     </div>
+</section>
     </main>
     <footer>
         <p>Made with ♥ by ...</p>
